<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stupid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_recording">On</string>
    <string name="stop_recording">Off</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="serverPort">Server(:Port)</string>
    <string name="test_connection">Test Connection</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="server_certificate">Server certificate</string>
    <string name="secure">Secure (HTTPS)</string>
    <string name="new_file">Toggle</string>
</resources>
