<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.kohaerenzstiftung.stupid.SetupActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/user"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edittext_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/serverPort"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edittext_serverport"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:ems="10" >
        </EditText>

        <CheckBox
            android:id="@+id/checkbox_secure"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/secure" />


        <Button
            android:id="@+id/button_testconnection_ok"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:enabled="true"
            android:text="@string/test_connection" />

        <Button
            android:id="@+id/button_recording_startstop"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:enabled="false"
            android:text="@string/start_recording" />

        <Button
            android:id="@+id/button_newfile"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:enabled="false"
            android:text="@string/new_file" />

    </LinearLayout>

</FrameLayout>